--- a/account/templates/user_management.html
+++ b/account/templates/user_management.html
@@ -43,7 +43,7 @@
                                 <div class="accordion-content" id="iteml3">
                                     <ul>
                                         <li><a class="nav-link"href="{% url 'date_settings' %}">Date Settings</a></li>
-                                        <li><a class="nav-link" href="{% url 'modes' %}">Communication Modes</a></li>
+                                        <li><a class="nav-link" href="{% url 'modes' %}">Mode Settings</a></li>
                                     </ul>
                                 </div>
                             </div>
