Refactor views and templates to enhance EIC manuscript review process and add skip AE functionality

--- a/oss/templates/manuscripts_review_report.html
+++ b/oss/templates/manuscripts_review_report.html
@@ -129,7 +129,7 @@
     </div>
 </section>
 
-
+<!-- Modal for Reviewer Details -->
 <div class="modal" id="reviewerModal" tabindex="-1" role="dialog" aria-labelledby="reviewerModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
