--- a/oss/templates/editor_in_chief.html
+++ b/oss/templates/editor_in_chief.html
@@ -27,6 +27,13 @@
             <div class="col-md-3">
                 <div class="about-information-sticky">
                     <ul>
+                        {% if skip_ae %}
+                        <li>
+                            <a class="nav-link" href="{% url 'eic_review_manuscripts' %}">
+                                Manuscripts to Review
+                            </a>
+                        </li>
+                        {% endif %}
                         <li>
                             <a class="nav-link active" href="{% url 'editor_in_chief' %}">
                                 Manuscripts waiting for decision
@@ -42,7 +49,7 @@
                                 Analytical Feedbacks
                             </a>
                         </li>
-                        <li >
+                        <li>
                             <a class="nav-link" href="{% url 'feedback_list' %}">
                                 Feedbacks
                             </a>
@@ -61,6 +68,9 @@
                                     <!-- <th scope="col">Journal</th> -->
                                     <th scope="col"width="18%">Title</th>
                                     <th scope="col">Author</th>
+                                    {% if skip_ae %}
+                                        <th scope="col">Reviewers</th>
+                                    {% endif %}
                                     <th scope="col">Action</th>
                                     <th scope="col">File</th>
                                     <th scope="col">Submitted on</th>
@@ -76,6 +86,21 @@
                                     <!-- <td>{{ submission.journal }}</td>  -->
                                     <td>{{ submission.title }}</td>
                                     <td>{{ submission.author.user.get_full_name }}</td>
+                                    {% if skip_ae %}
+                                    <td>
+                                        {% for reviewer in submission.submission_reviewer_set.all %}
+                                            <p><a href="#" class="reviewer-link" 
+                                            data-submission-id="{{ submission.id }}" 
+                                            data-reviewer-id="{{ reviewer.reviewer.id }}">
+                                            {{ reviewer.reviewer.user.first_name }} {{ reviewer.reviewer.user.last_name }} - comments
+                                            </a><br>
+                                        <a href="{% url 'contact_form' %}?email={{ reviewer.reviewer.user.email  }}" class="contact-link" target="_blank" onclick="window.open(this.href, '_blank', 'width=600,height=600'); return false;"> Contact {{ reviewer.reviewer.user.first_name }} {{ reviewer.reviewer.user.last_name }}</a> 
+                                            </p>
+                                        {% empty %} 
+                                            <p>No reviewers assigned</p>
+                                        {% endfor %}
+                                    </td>
+                                    {% endif %}
                                     <td>
                                         <p>
                                             <a href="#" class="make-decision-link" data-submission-id="{{ submission.id }}">Make decision</a><br>
@@ -172,12 +197,34 @@
                         <label for="commentsTextarea" class="form-label">Comments</label>
                         <textarea class="form-control" id="commentsTextarea" name="comments" rows="4"></textarea>
                     </div>
+                    {% if skip_ae %}
+
+                    {% else %}
                     <div class="form-check mb-3">
                         <input class="form-check-input" type="checkbox" id="includeAeCommentsCheckbox" name="include_ae_comments">
                         <label class="form-check-label" for="includeAeCommentsCheckbox">Include AE Comments</label>
                     </div>
+                    {% endif %}
                     <button type="submit" class="btn btn-primary">Submit</button>
                     <h3><div id="loadingMessage" style="display:none;">Processing...</div></h3>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal" id="reviewerModal" tabindex="-1" role="dialog" aria-labelledby="reviewerModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="reviewerModalLabel">Reviewer Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="reviewersForm">
+                <p><strong>Review Recommendation:</strong> <span id="reviewRecommendation"></span></p>
+                <p><strong>Review Comments:</strong></p>
+                <p id="reviewComments"></p>
                 </form>
             </div>
         </div>
@@ -284,6 +331,32 @@ $(document).ready(function() {
                 error: function(xhr, status, error) {
                     // Handle error
                     console.error(xhr.responseText);
+                }
+            });
+        });
+    });
+    
+    // Handle clicks on reviewer names
+            
+    $(document).ready(function(){
+        $('.reviewer-link').click(function(e){
+            e.preventDefault();
+            var submissionId = $(this).data('submission-id');
+            var reviewerId = $(this).data('reviewer-id');
+    
+            $.ajax({
+                url: "{% url 'get_reviewer_details' %}",
+                data: {
+                    'submission_id': submissionId,
+                    'reviewer_id': reviewerId
+                },
+                success: function(data) {
+                    $('#reviewRecommendation').text(data.review_recommendation);
+                    $('#reviewComments').text(data.review_comments);
+                    $('#reviewerModal').modal('show');
+                },
+                error: function(xhr, status, error) {
+                    alert("An error occurred while fetching reviewer details: " + error);
                 }
             });
         });
