Enhance EIC manuscript review process by filtering submissions and reviewer invitations based on associated journals

--- a/account/templates/modes.html
+++ b/account/templates/modes.html
@@ -95,7 +95,7 @@
                                 <div class="accordion-content" id="iteml3">
                                     <ul>
                                         <li><a class="nav-link" href="{% url 'date_settings' %}">Date Settings</a></li>
-                                        <li><a class="nav-link active" href="{% url 'modes' %}">Modes Settings</a></li>
+                                        <li><a class="nav-link active" href="{% url 'modes' %}">Mode Settings</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
-                <h2>Modes Settings</h2>
+                <h2>Mode Settings</h2>
 
                 <!-- Tabs -->
                 <div class="mode-tabs-container">
